[package]
name = "raft"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
futures = "0.3.30"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9.0"
